# jeroenoverschie.nl

./: .env.template  .ghost-cli  .gitignore  404.html  CNAME  README.md  config.development.json  get_books.py  hello.py  index.html  package.json  pyproject.toml  replace-in-file_config.js  replace-in-file_config.json  replace-in-file_sitemap_config.json  replace-in-file_sourcemaps_config.json  robots.txt  sitemap-authors.xml  sitemap-pages.xml  sitemap-posts.xml  sitemap-tags.xml  sitemap.xml  test_get_books.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
404/: index.html
a-sunrise-in-hamburg/: index.html
about/: index.html
ai-community-day-2024/: index.html
are-you-ready-for-mlops-on-xebia-com/: index.html
automated-curtains/: index.html
backdoors-in-neural-networks/: index.html
berlin/: index.html
books/: index.html
books_old/: index.html
bookshelfy/: index.html
contact/: index.html
covid-19-dashboard/: index.html
datamass-2023-dataset-enrichment-using-llms/: index.html
dataset-enrichment-using-llms/: index.html
dropblox-coding-challenge-at-pycon-de-pydata-berlin-2022/: index.html
finding-god-components-in-apache-tika/: index.html
fine-tuning-llms-yourself/: index.html
from-linear-regression-to-neural-networks/: index.html
godatafest-2022-how-to-create-a-devcontainer-for-your-python-project/: index.html
godatafest-dataset-enrichment-using-llms/: index.html
golden-hour-in-amsterdam/: index.html
how-to-create-a-devcontainer-for-your-python-project/: index.html
peru/: index.html
privacy/: index.html
(+127 files in other folders)
